# SignalUT

./: CMakeLists.txt  README.md  apparmor.json  build.sh  clickable-unconfined.yaml  clickable.yaml  crackle-build.sh  launcher.sh  launcher.sh.unconfined  manifest.json  signalut.apparmor.unconfined  signalut.desktop
crackle/: crackle
patches/: bump_electronbuilder_version.patch  inject_js_responsive.patch  responsive.js
patches/Signal-Desktop/: bump_electronbuilder_version.patch  contentHub.patch  fileInputPicker.preload.ts  fix-oomtracker.patch  inject_js_responsive.patch  responsive.js
patches/libnotify/: notification.c.diff
patches/maliit-inputcontext-gtk/: immodules.cache
utils/: filedialog-deamon.sh  get-scale.sh  mkdir-cache.sh  select-file.sh
utils/download-helper/qml/: ExportPage.qml
utils/get-density/: CMakeLists.txt  get-density.cpp
utils/mic-permission-requester/: Main.qml
utils/upload-helper/qml/: ImportPage.qml
utils/upload-helper/qml-upload-helper-module/: UploadHelper.cpp
utils/xdg-open/: xdg-open.c
